tests/baselines/reference/parserES5ComputedPropertyName3.errors.txt
tests/cases/conformance/parser/ecmascript5/ComputedPropertyNames/parserES5ComputedPropertyName3.ts(1,11): error TS9002: Computed property names are not currently supported.


==== tests/cases/conformance/parser/ecmascript5/ComputedPropertyNames/parserES5ComputedPropertyName3.ts (1 errors) ====
    var v = { [e]() { } };
              ~~~
!!! error TS9002: Computed property names are not currently supported.